--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^4.1.1",
     "@astrojs/mdx": "^0.12.0",
     "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.6.12",
+    "astro": "^1.6.14",
     "microcms-js-sdk": "^2.3.2"
   }
 }
