--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.6.14",
     "microcms-js-sdk": "^2.3.2"
+  },
+  "devDependencies": {
+    "wrangler": "^2.6.2"
   }
 }
