--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.6.14",
+    "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
     "rollup": "^3.7.4"
   },
