--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@astrojs/netlify": "^1.3.0",
     "@astrojs/rss": "^2.0.0",
     "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/vue": "^1.2.2",
     "astro": "^1.8.0",
     "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
-    "rollup": "^3.9.0"
+    "rollup": "^3.9.0",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "wrangler": "^2.6.2"
