--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@astrojs/cloudflare": "^5.0.0",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/netlify": "^1.3.0",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.0.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/vue": "^1.2.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "astro": "^1.8.0",
     "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "rollup": "^3.9.0",
     "vue": "^3.2.45"
   },
