--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.0.2",
     "wrangler": "^2.6.2"
   }
 }
