--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/cloudflare": "^5.0.0",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/netlify": "^1.3.0",
+    "@astrojs/preact": "^1.2.0",
     "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^2.0.0",
     "@astrojs/sitemap": "^1.0.0",
@@ -23,10 +24,12 @@
     "astro": "^1.8.0",
     "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
+    "preact": "^10.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "rollup": "^3.9.0",
+    "swr": "^2.0.0",
     "vue": "^3.2.45",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
@@ -34,5 +37,9 @@
   "devDependencies": {
     "@astrojs/partytown": "^1.0.2",
     "wrangler": "^2.6.2"
+  },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
   }
 }
