--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "astro": "^1.8.0",
     "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
-    "react": "^18.2.0",
+    "preact": "^10.11.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "rollup": "^3.9.0",
@@ -36,5 +36,9 @@
   "devDependencies": {
     "@astrojs/partytown": "^1.0.2",
     "wrangler": "^2.6.2"
+  },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
   }
 }
