--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "astro": "^1.8.0",
+    "astro-robots-txt": "^0.3.10",
     "axios": "^1.2.1",
     "microcms-js-sdk": "^2.3.2",
     "preact": "^10.11.3",
@@ -34,9 +35,5 @@
   "devDependencies": {
     "@astrojs/partytown": "^1.0.2",
     "wrangler": "^2.6.2"
-  },
-  "overrides": {
-    "react": "npm:@preact/compat@latest",
-    "react-dom": "npm:@preact/compat@latest"
   }
 }
