--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro": "^1.8.0",
     "astro-robots-txt": "^0.3.10",
     "axios": "^1.2.1",
+    "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^2.3.2",
     "microcms-richedit-processer": "^1.1.0",
     "preact": "^10.11.3",
