--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/rss": "^2.0.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/vue": "^1.2.2",
+    "@ctrl/react-adsense": "^1.6.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "astro": "^1.8.0",
