--- a/package.json
+++ b/package.json
@@ -11,32 +11,34 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.18.0",
+    "@astrojs/mdx": "^0.18.2",
     "@astrojs/netlify": "^2.2.0",
-    "@astrojs/partytown": "^1.1.0",
+    "@astrojs/partytown": "^1.2.0",
     "@astrojs/preact": "^2.1.0",
-    "@astrojs/react": "^2.1.0",
-    "@astrojs/rss": "^2.2.0",
-    "@astrojs/sitemap": "^1.2.0",
+    "@astrojs/react": "^2.1.1",
+    "@astrojs/rss": "^2.3.2",
+    "@astrojs/sitemap": "^1.2.1",
     "@astrojs/vue": "^2.1.0",
     "@ctrl/react-adsense": "^1.6.1",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.1.2",
-    "astro-robots-txt": "^0.4.0",
+    "astro": "^2.1.9",
+    "astro-robots-txt": "^0.4.1",
     "axios": "^1.3.4",
     "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^2.3.2",
     "microcms-richedit-processer": "^1.2.0",
-    "preact": "^10.13.1",
-    "react-paginate": "^8.1.4",
-    "rollup": "^3.19.0",
-    "swr": "^2.1.0",
+    "node-ts-cache": "^4.4.0",
+    "node-ts-cache-storage-memory": "^4.4.0",
+    "preact": "^10.13.2",
+    "react-paginate": "^8.1.5",
+    "rollup": "^3.20.2",
+    "swr": "^2.1.2",
     "vue": "^3.2.47",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "wrangler": "^2.12.2"
+    "wrangler": "^2.14.0"
   }
 }
