--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.6",
-    "@astrojs/netlify": "^2.2.3",
+    "@astrojs/mdx": "^0.19.7",
+    "@astrojs/netlify": "^2.3.0",
     "@astrojs/partytown": "^1.2.3",
     "@astrojs/preact": "^2.2.1",
     "@astrojs/react": "^2.2.1",
@@ -20,9 +20,9 @@
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/vue": "^2.2.1",
     "@ctrl/react-adsense": "^1.7.0",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
-    "astro": "^2.5.7",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "astro": "^2.8.0",
     "astro-robots-txt": "^0.5.0",
     "axios": "^1.4.0",
     "lazysizes": "^5.3.2",
@@ -30,15 +30,15 @@
     "microcms-richedit-processer": "^1.2.0",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
-    "preact": "^10.15.1",
+    "preact": "^10.16.0",
     "react-paginate": "^8.2.0",
-    "rollup": "^3.23.0",
-    "swr": "^2.1.5",
+    "rollup": "^3.26.2",
+    "swr": "^2.2.0",
     "vue": "^3.3.4",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "wrangler": "^2.20.0"
+    "wrangler": "2.20"
   }
 }
