--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "astro": "^2.9.3",
     "astro-robots-txt": "^0.5.0",
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "highlight.js": "^11.8.0",
+    "html-react-parser": "^4.2.1",
     "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^2.5.0",
     "microcms-richedit-processer": "^1.2.0",
+    "node-html-parser": "^6.1.6",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
     "preact": "^10.16.0",
