--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.0.0",
-    "@astrojs/netlify": "^3.0.0",
-    "@astrojs/partytown": "^2.0.0",
-    "@astrojs/preact": "^3.0.0",
-    "@astrojs/react": "^3.0.0",
+    "@astrojs/cloudflare": "^7.6.0",
+    "@astrojs/mdx": "^1.1.2",
+    "@astrojs/netlify": "^3.0.3",
+    "@astrojs/partytown": "^2.0.1",
+    "@astrojs/preact": "^3.0.1",
+    "@astrojs/react": "^3.0.3",
     "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/vue": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.2",
+    "@astrojs/vue": "^3.0.1",
     "@ctrl/react-adsense": "^1.7.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "astro": "^3.0.2",
-    "astro-robots-txt": "^0.5.0",
-    "axios": "^1.5.0",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.14",
+    "astro": "^3.3.2",
+    "astro-robots-txt": "^1.0.0",
+    "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
-    "highlight.js": "^11.8.0",
-    "html-react-parser": "^4.2.1",
+    "highlight.js": "^11.9.0",
+    "html-react-parser": "^4.2.6",
     "lazysizes": "^5.3.2",
-    "microcms-js-sdk": "^2.5.0",
+    "microcms-js-sdk": "^2.7.0",
     "microcms-richedit-processer": "^1.2.0",
-    "node-html-parser": "^6.1.6",
+    "node-html-parser": "^6.1.10",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
-    "preact": "^10.17.1",
+    "preact": "^10.18.1",
     "react-paginate": "^8.2.0",
-    "rollup": "^3.28.1",
-    "swr": "^2.2.2",
+    "rollup": "^4.1.4",
+    "swr": "^2.2.4",
     "vue": "^3.3.4",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "wrangler": "^3.6.0"
+    "wrangler": "^3.13.2"
   }
 }
