--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^10.4.1",
+    "@astrojs/cloudflare": "^10.4.2",
     "@astrojs/mdx": "^3.1.1",
-    "@astrojs/netlify": "^5.3.1",
+    "@astrojs/netlify": "^5.3.2",
     "@astrojs/partytown": "^2.1.1",
     "@astrojs/preact": "^3.5.0",
     "@astrojs/react": "^3.6.0",
@@ -23,7 +23,7 @@
     "@ctrl/react-adsense": "^1.7.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.10.3",
+    "astro": "^4.11.0",
     "astro-robots-txt": "^1.0.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
@@ -32,9 +32,11 @@
     "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^3.1.1",
     "microcms-richedit-processer": "^1.2.0",
+    "node-check-update": "^0.0.0",
     "node-html-parser": "^6.1.13",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
+    "npm-check-updates": "^16.14.20",
     "preact": "^10.22.0",
     "react-paginate": "^8.2.0",
     "rollup": "^4.18.0",
