--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^11.0.1",
+    "@astrojs/cloudflare": "^11.0.4",
     "@astrojs/mdx": "^3.1.3",
-    "@astrojs/netlify": "^5.4.0",
+    "@astrojs/netlify": "^5.5.0",
     "@astrojs/partytown": "^2.1.1",
     "@astrojs/preact": "^3.5.1",
-    "@astrojs/react": "^3.6.1",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vue": "^4.5.0",
     "@ctrl/react-adsense": "^1.7.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.12.3",
+    "astro": "^4.13.3",
     "astro-robots-txt": "^1.0.0",
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.7.3",
+    "cheerio": "^1.0.0",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
     "lazysizes": "^5.3.2",
@@ -36,16 +36,16 @@
     "node-html-parser": "^6.1.13",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
-    "npm-check-updates": "^17.0.0",
+    "npm-check-updates": "^17.0.6",
     "preact": "^10.23.1",
     "react-paginate": "^8.2.0",
-    "rollup": "^4.19.1",
+    "rollup": "^4.20.0",
     "swr": "^2.2.5",
-    "vue": "^3.4.35",
+    "vue": "^3.4.37",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "wrangler": "^3.67.1"
+    "wrangler": "^3.70.0"
   }
 }
