--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 {
 	"name": "Astro-blog",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+	// "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+	"dockerFile": "Dockerfile",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -12,7 +13,8 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm install -g npm-check-updates && npm install -g wrangler && npm install",
+	// "postCreateCommand": "npm install -g npm-check-updates && npm install -g wrangler && npm install",
+	"postCreateCommand": "bun install",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -27,10 +29,15 @@
 				"ms-vscode-remote.remote-ssh-edit",
 				"ms-vscode-remote.vscode-remote-extensionpack",
 				"ms-vscode.vscode-node-azure-pack",
-				"astro-build.astro-vscode"
+				"astro-build.astro-vscode",
+				"oven.bun-vscode"
 			]
 		}
-	}
+	},
+	"containerEnv": {
+		"SHELL": "/bin/bash"
+	},
+	"remoteUser": "bun"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
