--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^11.2.0",
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/netlify": "^5.5.4",
+    "@astrojs/cloudflare": "12.0.0",
+    "@astrojs/mdx": "4.0.1",
+    "@astrojs/netlify": "6.0.0",
     "@astrojs/partytown": "^2.1.2",
-    "@astrojs/preact": "^3.5.4",
-    "@astrojs/react": "^3.6.3",
+    "@astrojs/preact": "4.0.0",
+    "@astrojs/react": "4.0.0",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vue": "^4.5.3",
+    "@astrojs/vue": "5.0.1",
     "@ctrl/react-adsense": "^1.7.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
-    "astro": "^4.16.16",
+    "astro": "5.0.2",
     "astro-robots-txt": "^1.0.0",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "highlight.js": "^11.10.0",
-    "html-react-parser": "^5.1.18",
+    "html-react-parser": "^5.1.19",
     "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^3.1.2",
     "microcms-richedit-processer": "^1.2.0",
@@ -37,15 +37,15 @@
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
     "npm-check-updates": "^17.1.11",
-    "preact": "^10.25.0",
+    "preact": "^10.25.1",
     "react-paginate": "^8.2.0",
-    "rollup": "^4.27.4",
+    "rollup": "^4.28.0",
     "swr": "^2.2.5",
     "vue": "^3.5.13",
     "vue-paginate": "^3.6.0",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "wrangler": "^3.91.0"
+    "wrangler": "^3.92.0"
   }
 }
