--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-react-parser": "^5.2.0",
     "lazysizes": "^5.3.2",
     "microcms-js-sdk": "^3.1.2",
+    "microcms-rich-editor-handler": "^1.0.1",
     "microcms-richedit-processer": "^1.2.0",
     "node-check-update": "^0.0.0",
     "node-html-parser": "^6.1.13",
