feat: LiveContentConfigと関連する型をcontent.d.tsに追加し、型定義を拡張 feat: types.d.tsにcontent.d.tsの参照を追加 feat: Cloudflare Workersデプロイ用のGitHub Actionsワークフローを新規作成 feat: package.jsonにWorkers関連のスクリプトを追加 chore: _headersファイルに新しいURLを追加

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "workers:dev": "wrangler dev",
+    "workers:deploy": "wrangler deploy",
+    "workers:build": "npm run build && wrangler deploy"
   },
   "dependencies": {
     "@astrojs/cloudflare": "12.6.3",
