--- a/.github/workflows/cloudflare-workers-deploy.yml
+++ b/.github/workflows/cloudflare-workers-deploy.yml
@@ -15,6 +15,21 @@ jobs:
         run: npm ci # 関連パッケージをインストール
       - name: Build Project
         run: npm run build # 静的ファイルを生成
+        env:
+          PUBLIC_MICROCMS_SERVICE_DOMAIN: ${{ secrets.PUBLIC_MICROCMS_SERVICE_DOMAIN }}
+          PUBLIC_MICROCMS_API_KEY: ${{ secrets.PUBLIC_MICROCMS_API_KEY }}
+          SITE_TITLE: ${{ secrets.SITE_TITLE }}
+          SITE_DESCRIPTION: ${{ secrets.SITE_DESCRIPTION }}
+          PIXIV: ${{ secrets.PIXIV }}
+          FANBOX: ${{ secrets.FANBOX }}
+          DEVIANTART: ${{ secrets.DEVIANTART }}
+          CARD_IMAGE: ${{ secrets.CARD_IMAGE }}
+          ICON_HEADER: ${{ secrets.ICON_HEADER }}
+          FAVICON: ${{ secrets.FAVICON }}
+          BLUESKY: ${{ secrets.BLUESKY }}
+          BLUESKY_BRIDGE: ${{ secrets.BLUESKY_BRIDGE }}
+          XFOLIO: ${{ secrets.XFOLIO }}
+          OLD_SITE: ${{ secrets.OLD_SITE }}
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
