--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,7 @@
   // Update to today's date
   "compatibility_date": "2025-08-12",
   "assets": {
-    "directory": "./dist"
+    "directory": "./dist",
+    "not_found_handling": "404-page" // If you have a custom `src/pages/404.astro` page
   }
 }
